--- a/css/styles.css
+++ b/css/styles.css
@@ -51,9 +51,25 @@ img {
 
 
 .container {
-    max-width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
+    max-width: 320px;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .container {
+        max-width: 1158px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
 .header-div {
@@ -62,6 +78,8 @@ img {
 }
 
 .header {
+    margin: auto;
+    max-width: 320px;
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
@@ -101,6 +119,7 @@ img {
     justify-content: flex-start;
     flex-direction: row;
     gap: 40px;
+    display: none;
 }
 
 .link {
@@ -148,9 +167,24 @@ img {
 .address {
     font-style: normal;
     margin-left: auto;
+    display: none;
 }
 
-.address-list {
+.header-menu {
+    
+}
+
+.header-menu-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    fill: #2F2F37;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 0;
+}
+
+/* .address-list {
     list-style: none;
     display: flex;
     gap: 40px;
@@ -173,36 +207,34 @@ img {
 
 .addres-link:hover {
     color: #404bbf;
-}
+} */
 
 
 /*main*/
 
 .main {
-    padding: 188px 0;
+    padding: 72px 0;
     background: #2e2f42;
     background-image:
             linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
             url(../images/people-office.jpg);
-        margin: 0 auto;
-        max-width: 1440px;
-        background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
+    margin: 0 auto;
+    max-width: 320px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .main-title {
-    font-family: "Roboto", sans-serif;
     font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
+    font-size: 36px;
+    line-height: 1.12;
     letter-spacing: 0.02em;
     text-align: center;
     color: #ffffff;
-    max-width: 496px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 48px;
+    margin-bottom: 72px;
 }
 
 .button {
@@ -236,7 +268,7 @@ img {
 /*container-two*/
 
 .container-two {
-    padding: 120px 0;
+    padding: 96px 0;
 }
 
 .visually-hidden {
@@ -254,33 +286,34 @@ img {
 
 .objective {
     display: flex;
-    gap: 24px;
+    flex-direction: column;
+    gap: 72px;
 }
 
-.objective-title {
+/*.objective-title {
     width: calc((100%-72px) / 4);
-}
+}*/
 
 .container-icon {
+    display: none;
     border: 1px solid #8e8f99;
-        border-radius: 4px;
-        width: 264px;
-        height: 112px;
-        background: #f4f4fd;
-        padding: 24px 100px;
-        margin-bottom: 8px;
-        display: flex;
-            align-items: center;
-            justify-content: center;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    background: #f4f4fd;
+    padding: 24px 100px;
+    margin-bottom: 8px;
+    align-items: center;
+    justify-content: center;
 }
 
 
 .objective-list {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 20px;
+    font-weight: 700;
+    font-size: 36px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    text-align: center;
     color: #2e2f42;
     margin-bottom: 8px;
 }
@@ -288,13 +321,13 @@ img {
 /*section-title*/
 
 .section-title {
-    padding: 120px 0;
+    margin: auto;
+    max-width: 320px;
+    padding: 96px 0;
     background: #f4f4fd;
-
 }
 
 .title-header {
-    font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
@@ -307,16 +340,24 @@ img {
 
 .section-img {
     display: flex;
-    gap: 24px;
+    flex-direction: column;
+    gap: 72px;
 }
 
 .section-item {
     background-color: #ffffff;
-    width: calc((100% - 72px) / 4);
+    /*width: calc((100% - 72px) / 4);*/
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
             0px 1px 1px rgba(46, 47, 66, 0.16),
             0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.photography {
+    object-fit: cover;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .box {
@@ -324,7 +365,6 @@ img {
 }
 
 .container-list {
-    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -377,13 +417,15 @@ img {
 /*section-tree*/
 
 .section-tree {
-    padding: 120px 0;
+    margin: auto;
+    max-width: 320px;
+    padding: 96px 0;
 }
 
 .portfolio {
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11111;
+    line-height: 1.12;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
@@ -392,17 +434,18 @@ img {
 
 .portfolio-list {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    /*flex-wrap: wrap;
     column-gap: 24px;
-    row-gap: 48px;
+    row-gap: 48px;*/
 }
 
 .card-item {
-    width: calc((100% - 48px) / 3);
+    /*width: calc((100% - 48px) / 3);*/
     background-color: #ffffff;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
-        overflow: hidden;
+    overflow: hidden;
 }
 
 .section-overlay {
@@ -453,29 +496,35 @@ img {
 /*footer*/
 
 .footer {
+    margin: auto;
+    max-width: 320px;
     background: #2e2f42;
-    padding: 100px 0;
+    padding: 96px 0;
     color: #ffffff
 }
 
 .footer-container {
     display: flex;
-    align-items: baseline;
+    flex-direction: column;
 }
 
 .footer-link {
-    margin-right: 120px;
+    /*margin-right: 120px;*/
 }
 
 
 .footer-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
     font-weight: 700;
     font-size: 18px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     line-height: 1.17;
     color: #4d5ae5;
-    display: inline-block;
+    /*display: inline-block;*/
     margin-bottom: 16px;
 }
 
@@ -500,8 +549,11 @@ img {
 }
 
 .footer-media {
-    width: 208px;
-    height: 80px;
+    display: flex;
+        flex-direction: column;
+        align-items: center;
+    /*width: 208px;
+    height: 80px;*/
 }
 
 .footer-media-text {
@@ -536,8 +588,12 @@ img {
 }
 
 .footer-subscribe {
-    display: block;
-    margin-left: 60px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 72px;
+    align-items: center;
+   /* display: block;
+    margin-left: 60px;*/
 }
 
 .subscribe-text {
@@ -547,7 +603,9 @@ img {
 
 .footer-form {
     display: flex;
-    gap: 24px;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
 }
 
 .footer-icon {
@@ -617,7 +675,7 @@ img {
     justify-content: center;
     align-items: center;
 
-    opacity: 0;
+    opacity: 0; 
     pointer-events: none;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
