--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,13 @@ img {
 /*header*/
 
 
+.header {
+    margin: auto;
+    max-width: 320px;
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+}
+
 .container {
     max-width: 320px;
     padding-left: 16px;
@@ -58,30 +65,9 @@ img {
     margin-right: auto;
 }
 
-@media screen and (min-width: 768px) {
-    .container {
-        max-width: 768px;
-    }
-}
-
-@media screen and (min-width: 1158px) {
-    .container {
-        max-width: 1158px;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-}
-
 .header-div {
     display: flex;
     align-items: center;
-}
-
-.header {
-    margin: auto;
-    max-width: 320px;
-    border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .navigation {
@@ -111,67 +97,14 @@ img {
     color: #2e2f42;
 }
 
-/*navigation*/
-
 .hyperlink {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: row;
-    gap: 40px;
     display: none;
-}
-
-.link {
-    display: block;
-    padding: 24px 0;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link.carrent {
-    position: relative;
-    color:#404BBF;
-}
-
-.link.carrent::after {
-    content: '';
-    width: 100%;
-    height: 4px;
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    background-color: #404bbf;
-    border-radius: 2px;
-}
-
-.link:hover {
-    color: #404bbf;
-}
-
-.link:focus {
-    color: #404bbf;
-}
-
-.link:active {
-    color: #404bbf;
-    text-decoration: underline;
 }
 
 /*address*/
 
 .address {
-    font-style: normal;
-    margin-left: auto;
     display: none;
-}
-
-.header-menu {
-    
 }
 
 .header-menu-button {
@@ -182,33 +115,16 @@ img {
     fill: #2F2F37;
     border: 1px solid rgba(255, 255, 255, 0.1);
     padding: 0;
+    cursor: pointer;
 }
 
-/* .address-list {
-    list-style: none;
-    display: flex;
-    gap: 40px;
+.header-menu-button:hover {
+    color: #2E2F42;
 }
 
-.addres-link {
-    display: block;
-    padding: 24px 0;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    color: #434455;
-    text-decoration: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.header-menu-button:focus {
+    color: #2E2F42;
 }
-
-.addres-link:focus {
-    color: #404bbf;
-}
-
-.addres-link:hover {
-    color: #404bbf;
-} */
-
 
 /*main*/
 
@@ -289,10 +205,6 @@ img {
     flex-direction: column;
     gap: 72px;
 }
-
-/*.objective-title {
-    width: calc((100%-72px) / 4);
-}*/
 
 .container-icon {
     display: none;
@@ -663,7 +575,6 @@ img {
 }
 
 .form {
-    position: fixed;
     background-color: rgba(46, 47, 66, 0.4);
     position: fixed;
     top: 0;
@@ -675,7 +586,7 @@ img {
     justify-content: center;
     align-items: center;
 
-    opacity: 0; 
+    opacity: 0;
     pointer-events: none;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -686,12 +597,12 @@ img {
 }
 
 .form-modal {
-    padding: 72px 24px 24px 24px;
+    padding: 72px 16px 16px 16px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 408px;
-    min-height: 584px;
+    max-width: 288px;
+    min-height: 623px;
     background: #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -744,7 +655,6 @@ img {
     letter-spacing: 0.02em;
     color: #2E2F42;
     margin-bottom: 16px;
-    font-weight: 500;
 }
 
 .form-person-icon {
@@ -854,7 +764,6 @@ img {
 }
 
 .form-button {
-    font-family: "Roboto", sans-serif;
     display: block;    
     min-width: 169px;
     height: 56px;    
@@ -869,3 +778,210 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin: auto;
 }
+
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+        /*header*/
+
+    .header {
+        max-width: 768px;
+    }
+
+        /*logo*/
+
+    .header-logo {
+        margin-right: 120px;
+    }
+        /*navigation*/
+    
+    .hyperlink {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: row;
+        gap: 40px;
+    }
+    
+    .link {
+        display: block;
+        padding: 24px 0;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .link.carrent {
+        position: relative;
+        color: #404BBF;
+    }
+    
+    .link.carrent::after {
+        content: '';
+        width: 100%;
+        height: 4px;
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        background-color: #404bbf;
+        border-radius: 2px;
+    }
+    
+    .link:hover {
+        color: #404bbf;
+    }
+    
+    .link:focus {
+        color: #404bbf;
+    }
+    
+    .link:active {
+        color: #404bbf;
+        text-decoration: underline;
+    }
+
+            /*address*/
+    
+    .address {
+        font-style: normal;
+        margin-left: auto;
+        display: block;    
+    }
+
+    .address-list {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .addres-link {
+        display: block;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.04em;
+        color: #434455;
+        text-decoration: none;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .addres-link:focus {
+        color: #404bbf;
+    }
+
+    .addres-link:hover {
+        color: #404bbf;
+    }
+
+    .header-menu-button {
+        display: none;
+    }
+            
+            /*main*/
+  
+    .main {        
+        padding: 120px 0;
+        max-width: 768px;
+    }
+    
+    .main-title {
+        margin-bottom: 36px;
+    }
+
+            /*container-two*/
+
+    .objective {
+        gap:24px;
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+
+    .objective .objective-title {
+        width: calc((100% - 24px) / 2);
+}
+
+            /*section-title*/
+            /*section-tree*/
+            /*footer*/
+            /*form*/
+}
+     
+
+@media screen and (min-width: 1158px) {
+    .container {
+        max-width: 1158px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+        /*header*/
+        /*logo*/
+        /*navigation*/
+    
+    .hyperlink {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: row;
+        gap: 40px;
+    }
+    
+    .link.carrent {
+        position: relative;
+        color: #404BBF;
+    }
+    
+    .link.carrent::after {
+        content: '';
+        width: 100%;
+        height: 4px;
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        background-color: #404bbf;
+        border-radius: 2px;
+    }
+
+    .link {
+        display: block;
+        padding: 24px 0;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .link:hover {
+        color: #404bbf;
+    }
+    
+    .link:focus {
+        color: #404bbf;
+    }
+    
+    .link:active {
+        color: #404bbf;
+        text-decoration: underline;
+    }
+
+        /*address*/
+
+    
+
+    .objective-title {
+        width: calc((100%-72px) / 4);
+    }
+
+}
+
+      /*main*/
+      /*container-two*/
+      /*section-title*/
+      /*section-tree*/
+      /*footer*/
+      /*form*/
