--- a/css/styles.css
+++ b/css/styles.css
@@ -347,23 +347,27 @@ img {
 .portfolio-list {
     display: flex;
     flex-direction: column;
-    /*flex-wrap: wrap;
+    flex-wrap: wrap;
     column-gap: 24px;
-    row-gap: 48px;*/
+    row-gap: 48px;
 }
 
 .card-item {
-    /*width: calc((100% - 48px) / 3);*/
     background-color: #ffffff;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
     overflow: hidden;
+    width: 288px;
 }
 
 .section-overlay {
+    /*display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;*/
     position: relative;
-    width: 360px;
-    height: 300px;
+    /*width: 360px;
+    height: 300px;*/
     overflow: hidden;
 }
 
@@ -843,6 +847,10 @@ img {
         text-decoration: underline;
     }
 
+    .section-overlay {
+
+    }
+
             /*address*/
     
     .address {
@@ -948,9 +956,9 @@ img {
     flex-wrap: wrap;
     flex-direction: row;
     gap: 24px;
-}
+} 
 
-.portfolio-list .card-item {
+ .card-item {
     width: calc((100% - 24px) / 2);
 }
 
@@ -995,7 +1003,16 @@ img {
         padding-right: 15px;
     }
         /*header*/
+
+    .header {
+        max-width: 100%;
+    }
+
         /*logo*/
+    .header-logo {
+        margin-right: 76px;
+    }
+
         /*navigation*/
     
     .hyperlink {
@@ -1047,17 +1064,75 @@ img {
     }
 
         /*address*/
-    
-
-    .objective-title {
-        width: calc((100%-72px) / 4);
+    .address-list {
+        flex-direction: row;
     }
 
-}
+    .addres-link {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+
 
       /*main*/
+
+    .main {
+        padding: 188px 0;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/people-office.jpg);
+    }
+
+    @media (min-resolution: 2x) {
+    .main {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/people-office@2x.jpg);
+    }
+      
+    }
+
+
+    .main-title {
+        margin-bottom: 48px;
+    }
       /*container-two*/
+    .container-two {
+        padding: 120px 0;
+    }
+
+    .objective {
+        flex-wrap: nowrap;
+    }
+
+    .container-icon {
+        display: block;
+        display: flex;
+    }
+
+    .objective-list {
+        font-weight: 500;
+        font-size: 20px;
+    }
+
+
       /*section-title*/
+    .section-title {
+        padding: 120px 0;
+    }
       /*section-tree*/
+    .section-tree {
+        padding: 120px 0;
+    }
+
+    .portfolio-list {
+        row-gap: 48px;
+        
+    }
+
+    .card-item {
+        width: calc((100% - 48px) / 3);
+    }
       /*footer*/
       /*form*/
+
+}      
